--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,10 +17,10 @@
 			</nav>
 
 			<h3 class="col-md-8" data-animation="dropDownAnim">
-				<%= locals.text.pres1 %> <b> <i>{</i><%= locals.text.pres2 %><i>}</i> </b> <%= locals.text.pres3 %>
+				<%= text.pres1 %> <b> <i>{</i><%= text.pres2 %><i>}</i> </b> <%= text.pres3 %>
 			</h3>
 			<h1 class="hero-title" data-animation="dropDownAnim">Andréas Blin</h1>
-			<h2 class="hero-secondary-title col-xl-6 offset-xl-1"><i>❝<%= locals.text.quote %>❞</i></h2>
+			<h2 class="hero-secondary-title col-xl-6 offset-xl-1"><i>❝<%= text.quote %>❞</i></h2>
 
 			<div class="call-wrapper offset-md-3 offset-sm-2 offset-xs-1">
 				<a href="#portfolio" class="action-link portfolio-link" data-animation="portfolioLinkAnim">Portfolio</a>
@@ -47,19 +47,19 @@
 					<div class="portfolio-info">
 						<h1 class="hero-title mt-4 mb-0 col-12" data-animation="dropDownAnim"><a href="http://www.xs-url.fr" target="_blank">Xs Url</a></h1>
 
-						<p><%= locals.text.xs.p1 %> <b>URL shortener</b><%= locals.text.xs.p2 %> <b>spoofing</b> <%= locals.text.xs.p3 %> <b>URL</b>.</p>
-						<p><%= locals.text.xs.p4 %> <b><%= locals.text.CustomCSS %></b>. <%= locals.text.xs.p5 %> <b>NodeJS</b> <%= locals.text.xs.p6 %> <b>API</b> <%= locals.text.xs.p7 %>.</p>
-						<p class="last"><%= locals.text.xs.last %> <b>light-mode</b> <%= locals.text.xs.last2 %> <b>dark-mode</b> <%= locals.text.xs.last3 %>!</p>
+						<p><%= text.xs.p1 %> <b><%= text.xs.shortener %></b> <%= text.xs.p2 %> <b><%= text.spoofing %></b> <%= text.xs.p3 %> <b>URL</b>.</p>
+						<p><%= text.xs.p4 %> <b><%= text.CustomCSS %></b>. <%= text.xs.p5 %> <b>NodeJS</b> <%= text.xs.p6 %> <b>API</b> <%= text.xs.p7 %>.</p>
+						<p class="last"><%= text.xs.last %> <b><%= text.lightmode %></b> <%= text.xs.last2 %> <b><%= text.darkmode %></b> <%= text.xs.last3 %>!</p>
 
 						<div class="skills-used-large">
 							<ul>
 								<li>NodeJS</li>
 								<li>API</li>
-								<li><%= locals.text.CustomCSS %></li>
+								<li><%= text.CustomCSS %></li>
 								<li>Javascript</li>
 							</ul>
 							<div class="skill-call-wrapper">
-								<a href="#skills" class="action-link m-auto"> <%= locals.text.skills %> </a>
+								<a href="#skills" class="action-link m-auto"> <%= text.skills %> </a>
 							</div>
 						</div>
 					</div>
@@ -81,15 +81,15 @@
 						<h1 class="hero-title mt-4 mb-0 col-12" data-animation="dropDownAnim"><a href="https://www.maral.fr" target="_blank">Maral</a></h1>
 
 						<p>
-							An <b>e-commerce</b> website allowing customers to purchase paintings or replicas of these paintings using <b><a href="https://pwinty.com/" target="_blank">Pwinty API</a></b> to
-							automatically handle replicas orders. Clients can pay for their orders by card using the <b><a href="https://stripe.com/" target="_blank">Stripe API</a></b
+							<%= text.maral.p1 %> <b>e-commerce</b> <%= text.maral.p2 %> <b><a href="https://pwinty.com/" target="_blank"><%= text.pwinty %></a></b> <%= text.maral.p3 %>
+							<b><a href="https://stripe.com/" target="_blank"><%= text.stripe %></a></b
 							>.
 						</p>
 						<p>
-							I used <b><a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></b> for the main layout of the front-end design, although most of the <b>CSS</b> has been custom-made to the
-							client's taste. The <b>NodeJS</b> back-end is built around a <b>custom API</b> to manage requests and orders seamlessly.
+							<%= text.maral.p4 %> <b><a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></b> <%= text.maral.p5 %> <b>CSS</b> <%= text.maral.p6 %> <b>NodeJS</b> <%= text.maral.p7 %>
+							<b><%= text.CustomAPI %></b> <%= text.maral.p8 %>.
 						</p>
-						<p class="last">Includes an admin interface that allows the client to manage the content of the website and the orders very easily, with just a few clicks.</p>
+						<p class="last"><%= text.maral.last %>.</p>
 
 						<div class="skills-used-large">
 							<ul>
@@ -100,7 +100,7 @@
 								<li>Bootstrap</li>
 							</ul>
 							<div class="skill-call-wrapper">
-								<a href="#skills" class="action-link m-auto">Skills</a>
+								<a href="#skills" class="action-link m-auto"><%= text.skills %></a>
 							</div>
 						</div>
 					</div>
@@ -116,7 +116,7 @@
 
 					<div class="portfolio-info">
 						<h1 class="hero-title mt-4 mb-0 col-12" data-animation="dropDownAnim"><a href="http://www.xs-url.fr" target="_blank">Covid Tracker</a></h1>
-						<h2 class="text-center"><%= locals.text.coming %>..?</h2>
+						<h2 class="text-center"><%= text.coming %>..?</h2>
 
 						<div class="skills-used-large"></div>
 					</div>
@@ -127,10 +127,10 @@
 
 	<section class="section main-section fp-auto-height-responsive" id="skills-section" data-anchor="skills">
 		<div class="bg-clipper">
-			<h1 class="hero-title pt-5 mb-0" data-animation="dropDownAnim"><%= locals.text.skills %></h1>
+			<h1 class="hero-title pt-5 mb-0" data-animation="dropDownAnim"><%= text.skills %></h1>
 
 			<div class="skill-content col-md-10 p-3">
-				<p class="skills-text">{ <%= locals.text.contactTab.contactMe %> }</p>
+				<p class="skills-text">{ <%= text.skillsTab.nonExhaustive %> }</p>
 				<div class="skills-section">
 					<h2>Front-end</h2>
 					<div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 skills-wrapper">
@@ -220,7 +220,7 @@
 				</div>
 
 				<div class="skills-section">
-					<h2>Misc</h2>
+					<h2><%= text.skillsTab.misc %></h2>
 					<div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 skills-wrapper">
 						<h1 data-animation="leftBracketAnim">{</h1>
 						<div class="wrapper-icon">
@@ -245,38 +245,38 @@
 						<h1 data-animation="rightBracketAnim">}</h1>
 					</div>
 				</div>
-				<a href="#contact" class="action-link m-auto"><%= locals.text.contactTab.contactMe %> !</a>
+				<a href="#contact" class="action-link m-auto"><%= text.contactTab.contactMe %> !</a>
 			</div>
 		</div>
 	</section>
 
 	<section class="section main-section even fp-auto-height-responsive" id="contact-section" data-anchor="contact">
 		<div class="bg-clipper">
-			<h1 class="hero-title pt-5" data-animation="dropDownAnim"><%= locals.text.contactTab.contact %></h1>
+			<h1 class="hero-title pt-5" data-animation="dropDownAnim"><%= text.contactTab.contact %></h1>
 
 			<form class="col-md-6 col-sm-8 offset-sm-2" id="contact-form" method="POST" data-animation="formAnim" action="/api/contact/">
 				<div class="row">
 					<div class="col-md-12">
-						<label class="control-label"><%= locals.text.contactTab.email %></label>
-						<input placeholder="<%= locals.text.contactTab.placeholderEmail %>" type="email" name="email" id="email" required />
+						<label class="control-label"><%= text.contactTab.email %></label>
+						<input placeholder="<%= text.contactTab.placeholderEmail %>" type="email" name="email" id="email" required />
 					</div>
 				</div>
 				<div class="row mt-2">
 					<div class="col-md-12">
-						<label class="control-label"><%= locals.text.contactTab.object %></label>
-						<input placeholder="<%= locals.text.contactTab.placeholderObject %>" type="text" name="title" id="title" required />
+						<label class="control-label"><%= text.contactTab.object %></label>
+						<input placeholder="<%= text.contactTab.placeholderObject %>" type="text" name="title" id="title" required />
 					</div>
 					<div class="col-md-12 mt-2">
-						<label class="control-label"><%= locals.text.contactTab.message %></label>
-						<textarea class="mb-0" id="content" rows="8" name="content" placeholder="<%= locals.text.contactTab.placeholderMessage %>" required></textarea>
+						<label class="control-label"><%= text.contactTab.message %></label>
+						<textarea class="mb-0" id="content" rows="8" name="content" placeholder="<%= text.contactTab.placeholderMessage %>" required></textarea>
 					</div>
 				</div>
 
 				<div class="submit-btn-wrapper">
-					<span><%= locals.text.contactTab.send %></span>
-					<input type="submit" class="action-btn" value="Send" id="submit-contact" />
+					<span><%= text.contactTab.send %></span>
+					<input type="submit" class="action-btn" value="<%= text.contactTab.send %>" id="submit-contact" />
 				</div>
-				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+				<input type="hidden" name="_csrf" value="<%= csrfToken %>" />
 
 				<div class="col-md-12 p-0 mt-3 contact-alert-wrapper">
 					<div id="contact-alert"></div>
