--- a/public/main.scss
+++ b/public/main.scss
@@ -5,16 +5,20 @@ $colors: (
 	//#0c0c0c,
 	dark-shade-light: lighten(#151515, 7.5%),
 	dark-shade-lighter: lighten(#151515, 12%),
-	main: #10ac84,
+	// main: #10ac84,
+	main: #33a1fd,
 	//#ec5454(pale red),
 	//#f44336(orange),
 	//#ff3939(red),
 	//#3dd86d(green ++),
 	//#751fff(purple),
 	//#f34023(purple),
-	main-light: lighten(#10ac84, 10%),
-	main-l: lighten(#10ac84, 5%),
-	main-dark: darken(#10ac84, 10%),
+	// main-light: lighten(#10ac84, 10%),
+	// main-l: lighten(#10ac84, 5%),
+	// main-dark: darken(#10ac84, 10%),
+	main-light: lighten(#33a1fd, 10%),
+	main-l: lighten(#33a1fd, 5%),
+	main-dark: darken(#33a1fd, 10%),
 	maral: #233bde,
 	maral-light: lighten(#233bde, 10%),
 	maral-dark: darken(#233bde, 10%),
@@ -22,6 +26,28 @@ $colors: (
 	xs-url-light: #0ade7a,
 	xs-url-dark: darken(#08ad5f, 10%)
 );
+
+.container-decorated {
+	border-radius: 15px;
+	padding: 24px 24px 12px 24px;
+	background: url("./bg/topography.png");
+	// background-image: url("data:image/svg+xml,%3Csvg width='100' height='20' viewBox='0 0 100 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21.184 20c.357-.13.72-.264 1.088-.402l1.768-.661C33.64 15.347 39.647 14 50 14c10.271 0 15.362 1.222 24.629 4.928.955.383 1.869.74 2.75 1.072h6.225c-2.51-.73-5.139-1.691-8.233-2.928C65.888 13.278 60.562 12 50 12c-10.626 0-16.855 1.397-26.66 5.063l-1.767.662c-2.475.923-4.66 1.674-6.724 2.275h6.335zm0-20C13.258 2.892 8.077 4 0 4V2c5.744 0 9.951-.574 14.85-2h6.334zM77.38 0C85.239 2.966 90.502 4 100 4V2c-6.842 0-11.386-.542-16.396-2h-6.225zM0 14c8.44 0 13.718-1.21 22.272-4.402l1.768-.661C33.64 5.347 39.647 4 50 4c10.271 0 15.362 1.222 24.629 4.928C84.112 12.722 89.438 14 100 14v-2c-10.271 0-15.362-1.222-24.629-4.928C65.888 3.278 60.562 2 50 2 39.374 2 33.145 3.397 23.34 7.063l-1.767.662C13.223 10.84 8.163 12 0 12v2z' fill='%23ca1011' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
+	margin-top: 5% !important;
+}
+
+// .testt {
+// 	background-image: url("/blob.svg");
+// }
+
+#introduction {
+	.profile-img {
+		border-radius: 50%;
+		border: 10px solid #0c0c0c !important;
+	}
+	.paragraph {
+		color: black !important;
+	}
+}
 
 @function color($colorName) {
 	@return map-get($colors, $colorName);
@@ -34,6 +60,26 @@ $colors: (
 		filter: invert(1) hue-rotate(180deg);
 	}
 }
+
+.fa-icon {
+	width: 30px;
+}
+
+/* BOOTSTRAP CONFIG */
+@import "../node_modules/bootstrap/scss/functions";
+
+$primary: #26a69a;
+$secondary: #204141;
+$info: #4c9a9a;
+$warning: #facf5a;
+$danger: #ff5959;
+$success: #2cb978;
+
+@import "../node_modules/bootstrap/scss/variables";
+@import "../node_modules/bootstrap/scss/maps";
+@import "../node_modules/bootstrap/scss/mixins";
+@import "../node_modules/bootstrap/scss/root";
+@import "../node_modules/bootstrap/scss/buttons";
 
 // font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width])));
 $min_width: 320px;
@@ -668,7 +714,119 @@ section {
 		//background-color: color(dark-shade);background: url("./bg/cartographer.png");
 		background: url("./bg/cartographer.png");
 		//background-size: cover;
-		clip-path: polygon(0px 0px, 100% 0px, 100% 98%, 89% 95%, 31% 85%, 0px 78%);
+
+		/*
+			Width:700
+			Height:125
+			Offset:105
+			Amplitude:10
+			Frequency:3
+		*/
+		clip-path: polygon(
+			100% 0%,
+			0% 0%,
+			0% 92%,
+			1% 91.99%,
+			2% 91.96%,
+			3% 91.92%,
+			4% 91.86%,
+			5% 91.77%,
+			6% 91.68%,
+			7% 91.56%,
+			8% 91.43%,
+			9% 91.28%,
+			10% 91.11%,
+			11% 90.93%,
+			12% 90.73%,
+			13% 90.52%,
+			14% 90.29%,
+			15% 90.04%,
+			16% 89.79%,
+			17% 89.52%,
+			18% 89.24%,
+			19% 88.94%,
+			20% 88.64%,
+			21% 88.32%,
+			22% 88%,
+			23% 87.66%,
+			24% 87.32%,
+			25% 86.97%,
+			26% 86.61%,
+			27% 86.25%,
+			28% 85.88%,
+			29% 85.51%,
+			30% 85.13%,
+			31% 84.76%,
+			32% 84.38%,
+			33% 83.99%,
+			34% 83.61%,
+			35% 83.23%,
+			36% 82.86%,
+			37% 82.48%,
+			38% 82.11%,
+			39% 81.74%,
+			40% 81.38%,
+			41% 81.02%,
+			42% 80.67%,
+			43% 80.33%,
+			44% 79.99%,
+			45% 79.67%,
+			46% 79.35%,
+			47% 79.05%,
+			48% 78.76%,
+			49% 78.47%,
+			50% 78.2%,
+			51% 77.95%,
+			52% 77.71%,
+			53% 77.48%,
+			54% 77.27%,
+			55% 77.07%,
+			56% 76.89%,
+			57% 76.72%,
+			58% 76.57%,
+			59% 76.44%,
+			60% 76.32%,
+			61% 76.22%,
+			62% 76.14%,
+			63% 76.08%,
+			64% 76.04%,
+			65% 76.01%,
+			66% 76%,
+			67% 76.01%,
+			68% 76.04%,
+			69% 76.08%,
+			70% 76.15%,
+			71% 76.23%,
+			72% 76.33%,
+			73% 76.44%,
+			74% 76.58%,
+			75% 76.73%,
+			76% 76.89%,
+			77% 77.08%,
+			78% 77.28%,
+			79% 77.49%,
+			80% 77.72%,
+			81% 77.96%,
+			82% 78.22%,
+			83% 78.49%,
+			84% 78.77%,
+			85% 79.06%,
+			86% 79.37%,
+			87% 79.69%,
+			88% 80.01%,
+			89% 80.35%,
+			90% 80.69%,
+			91% 81.04%,
+			92% 81.4%,
+			93% 81.76%,
+			94% 82.13%,
+			95% 82.5%,
+			96% 82.88%,
+			97% 83.25%,
+			98% 83.63%,
+			99% 84.02%,
+			100% 84.4%
+		);
 	}
 }
 
