--- a/public/main.scss
+++ b/public/main.scss
@@ -28,11 +28,12 @@ $colors: (
 );
 
 .container-decorated {
-	border-radius: 15px;
+	border-radius: 15px 150px 15px 150px;
 	padding: 24px 24px 12px 24px;
 	background: url("./bg/topography.png");
 	// background-image: url("data:image/svg+xml,%3Csvg width='100' height='20' viewBox='0 0 100 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21.184 20c.357-.13.72-.264 1.088-.402l1.768-.661C33.64 15.347 39.647 14 50 14c10.271 0 15.362 1.222 24.629 4.928.955.383 1.869.74 2.75 1.072h6.225c-2.51-.73-5.139-1.691-8.233-2.928C65.888 13.278 60.562 12 50 12c-10.626 0-16.855 1.397-26.66 5.063l-1.767.662c-2.475.923-4.66 1.674-6.724 2.275h6.335zm0-20C13.258 2.892 8.077 4 0 4V2c5.744 0 9.951-.574 14.85-2h6.334zM77.38 0C85.239 2.966 90.502 4 100 4V2c-6.842 0-11.386-.542-16.396-2h-6.225zM0 14c8.44 0 13.718-1.21 22.272-4.402l1.768-.661C33.64 5.347 39.647 4 50 4c10.271 0 15.362 1.222 24.629 4.928C84.112 12.722 89.438 14 100 14v-2c-10.271 0-15.362-1.222-24.629-4.928C65.888 3.278 60.562 2 50 2 39.374 2 33.145 3.397 23.34 7.063l-1.767.662C13.223 10.84 8.163 12 0 12v2z' fill='%23ca1011' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
 	margin-top: 5% !important;
+	border: 7px solid #1a1a1a !important;
 }
 
 // .testt {
@@ -61,14 +62,10 @@ $colors: (
 	}
 }
 
-.fa-icon {
-	width: 30px;
-}
-
 /* BOOTSTRAP CONFIG */
 @import "../node_modules/bootstrap/scss/functions";
 
-$primary: #26a69a;
+$primary: #33a1fd;
 $secondary: #204141;
 $info: #4c9a9a;
 $warning: #facf5a;
@@ -200,7 +197,7 @@ html[data-theme="dark"] {
 	padding: 0;
 	box-sizing: border-box;
 	text-decoration: none;
-	font-family: "Helvetica";
+	font-family: "Roboto";
 	overflow-wrap: break-word;
 	scroll-behavior: smooth;
 }
@@ -227,69 +224,8 @@ body {
 	min-width: 400px;
 }
 
-.submit-btn-wrapper {
-	width: 250px;
-	margin: 5px auto 0 auto;
-	-webkit-transition: 0.3s ease-in-out;
-	transition: 0.3s ease-in-out;
-	background-image: linear-gradient(270deg, color(main), color(main-light));
-	z-index: 6;
-	text-decoration: none;
-	color: #f1f1f1 !important;
-	font-size: 24px;
-	text-align: center;
-	-webkit-clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
-	clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
-
-	span {
-		position: absolute;
-		left: 50%;
-		top: 50%;
-		transform: translate(-50%, -50%);
-	}
-
-	&:hover {
-		color: color(light-shade) !important;
-		text-decoration: none;
-		transform: scale(1.05);
-
-		-webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
-		clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
-	}
-}
-
-.action-btn {
-	display: block;
-	padding: 10px 0;
-	border: none !important;
-	//	background-size: 250px;
-	//	background-repeat: repeat;
-	background-image: linear-gradient(90deg, color(main), color(main-dark));
-	color: #f1f1f1 !important;
-	outline: none;
-	cursor: pointer;
-	-webkit-transition: 0.3s ease-in-out;
-	transition: 0.3s ease-in-out;
-	opacity: 1;
-	z-index: 5;
-	width: 250px;
-	margin: 5px auto 0 auto;
-	text-decoration: none;
-	font-size: 24px;
-	text-align: center;
-	-webkit-clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
-	clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
-
-	&:hover {
-		opacity: 0;
-		//background-position: -250px;
-		color: color(light-shade) !important;
-		text-decoration: none;
-		transform: scale(1.05);
-
-		-webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
-		clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
-	}
+.text-main {
+	color: color(main);
 }
 
 .action-link {
@@ -471,6 +407,34 @@ select:-webkit-autofill {
 }
 /* END NAVBAR */
 
+.project-item {
+	background-image: url("bg/cartographer.png");
+
+	h1 {
+		font-size: 20px;
+		margin: 0 10px;
+	}
+
+	p {
+		font-size: 15px;
+		opacity: 0.9;
+	}
+
+	.badge-group {
+		display: flex;
+		justify-content: space-between;
+
+		span {
+			margin: 5px;
+		}
+	}
+}
+
+.test {
+	background-image: url("blob.svg");
+	background-size: cover;
+}
+
 #landing-section {
 	background-repeat: no-repeat;
 	background-color: color(dark-shade);
@@ -564,14 +528,6 @@ h3,
 	width: 100px;
 }
 
-.freelancer-svg {
-	width: clamp(250px, 45%, 850px);
-	position: absolute;
-	left: 50%;
-	top: 25%;
-	z-index: 1;
-}
-
 .contact-svg {
 	position: absolute;
 	top: clamp(6%, 25%, 80px);
@@ -634,7 +590,112 @@ section {
 		height: 102vh;
 		//background-color: color(dark-shade);
 		background: url("./bg/cartographer.png");
-		clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
+		// clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
+		clip-path: polygon(
+			100% 0%,
+			0% 0%,
+			0% 92%,
+			1% 91.99%,
+			2% 91.96%,
+			3% 91.92%,
+			4% 91.86%,
+			5% 91.77%,
+			6% 91.68%,
+			7% 91.56%,
+			8% 91.43%,
+			9% 91.28%,
+			10% 91.11%,
+			11% 90.93%,
+			12% 90.73%,
+			13% 90.52%,
+			14% 90.29%,
+			15% 90.04%,
+			16% 89.79%,
+			17% 89.52%,
+			18% 89.24%,
+			19% 88.94%,
+			20% 88.64%,
+			21% 88.32%,
+			22% 88%,
+			23% 87.66%,
+			24% 87.32%,
+			25% 86.97%,
+			26% 86.61%,
+			27% 86.25%,
+			28% 85.88%,
+			29% 85.51%,
+			30% 85.13%,
+			31% 84.76%,
+			32% 84.38%,
+			33% 83.99%,
+			34% 83.61%,
+			35% 83.23%,
+			36% 82.86%,
+			37% 82.48%,
+			38% 82.11%,
+			39% 81.74%,
+			40% 81.38%,
+			41% 81.02%,
+			42% 80.67%,
+			43% 80.33%,
+			44% 79.99%,
+			45% 79.67%,
+			46% 79.35%,
+			47% 79.05%,
+			48% 78.76%,
+			49% 78.47%,
+			50% 78.2%,
+			51% 77.95%,
+			52% 77.71%,
+			53% 77.48%,
+			54% 77.27%,
+			55% 77.07%,
+			56% 76.89%,
+			57% 76.72%,
+			58% 76.57%,
+			59% 76.44%,
+			60% 76.32%,
+			61% 76.22%,
+			62% 76.14%,
+			63% 76.08%,
+			64% 76.04%,
+			65% 76.01%,
+			66% 76%,
+			67% 76.01%,
+			68% 76.04%,
+			69% 76.08%,
+			70% 76.15%,
+			71% 76.23%,
+			72% 76.33%,
+			73% 76.44%,
+			74% 76.58%,
+			75% 76.73%,
+			76% 76.89%,
+			77% 77.08%,
+			78% 77.28%,
+			79% 77.49%,
+			80% 77.72%,
+			81% 77.96%,
+			82% 78.22%,
+			83% 78.49%,
+			84% 78.77%,
+			85% 79.06%,
+			86% 79.37%,
+			87% 79.69%,
+			88% 80.01%,
+			89% 80.35%,
+			90% 80.69%,
+			91% 81.04%,
+			92% 81.4%,
+			93% 81.76%,
+			94% 82.13%,
+			95% 82.5%,
+			96% 82.88%,
+			97% 83.25%,
+			98% 83.63%,
+			99% 84.02%,
+			100% 84.4%
+		);
 	}
 
 	.skill-content {
@@ -835,7 +896,112 @@ section {
 	background: linear-gradient(to bottom, color(light-shade) 50%, color(dark-shade) 50%);
 	.bg-clipper {
 		height: 107%;
-		clip-path: polygon(0 0, 100% 0, 100% 87%, 86% 98%, 19% 98%, 0 86%);
+		// clip-path: polygon(0 0, 100% 0, 100% 87%, 86% 98%, 19% 98%, 0 86%);
+		clip-path: polygon(
+			100% 0%,
+			0% 0%,
+			0% 92%,
+			1% 91.99%,
+			2% 91.96%,
+			3% 91.92%,
+			4% 91.86%,
+			5% 91.77%,
+			6% 91.68%,
+			7% 91.56%,
+			8% 91.43%,
+			9% 91.28%,
+			10% 91.11%,
+			11% 90.93%,
+			12% 90.73%,
+			13% 90.52%,
+			14% 90.29%,
+			15% 90.04%,
+			16% 89.79%,
+			17% 89.52%,
+			18% 89.24%,
+			19% 88.94%,
+			20% 88.64%,
+			21% 88.32%,
+			22% 88%,
+			23% 87.66%,
+			24% 87.32%,
+			25% 86.97%,
+			26% 86.61%,
+			27% 86.25%,
+			28% 85.88%,
+			29% 85.51%,
+			30% 85.13%,
+			31% 84.76%,
+			32% 84.38%,
+			33% 83.99%,
+			34% 83.61%,
+			35% 83.23%,
+			36% 82.86%,
+			37% 82.48%,
+			38% 82.11%,
+			39% 81.74%,
+			40% 81.38%,
+			41% 81.02%,
+			42% 80.67%,
+			43% 80.33%,
+			44% 79.99%,
+			45% 79.67%,
+			46% 79.35%,
+			47% 79.05%,
+			48% 78.76%,
+			49% 78.47%,
+			50% 78.2%,
+			51% 77.95%,
+			52% 77.71%,
+			53% 77.48%,
+			54% 77.27%,
+			55% 77.07%,
+			56% 76.89%,
+			57% 76.72%,
+			58% 76.57%,
+			59% 76.44%,
+			60% 76.32%,
+			61% 76.22%,
+			62% 76.14%,
+			63% 76.08%,
+			64% 76.04%,
+			65% 76.01%,
+			66% 76%,
+			67% 76.01%,
+			68% 76.04%,
+			69% 76.08%,
+			70% 76.15%,
+			71% 76.23%,
+			72% 76.33%,
+			73% 76.44%,
+			74% 76.58%,
+			75% 76.73%,
+			76% 76.89%,
+			77% 77.08%,
+			78% 77.28%,
+			79% 77.49%,
+			80% 77.72%,
+			81% 77.96%,
+			82% 78.22%,
+			83% 78.49%,
+			84% 78.77%,
+			85% 79.06%,
+			86% 79.37%,
+			87% 79.69%,
+			88% 80.01%,
+			89% 80.35%,
+			90% 80.69%,
+			91% 81.04%,
+			92% 81.4%,
+			93% 81.76%,
+			94% 82.13%,
+			95% 82.5%,
+			96% 82.88%,
+			97% 83.25%,
+			98% 83.63%,
+			99% 84.02%,
+			100% 84.4%
+		);
 		background: linear-gradient(to bottom, color(light-shade) 88%, color(dark-shade) 12%);
 		background: url("./bg/topography.png");
 	}
@@ -881,121 +1047,120 @@ section {
 }
 
 #portfolio-section {
-	h1 {
-		text-align: center;
-		font-weight: normal !important;
-		margin: 2rem 0 1rem 0 !important;
-	}
-
-	a {
-		color: color(main);
-		text-decoration: none;
-	}
-
 	//background: linear-gradient(to bottom, color(light-shade) 50%, color(dark-shade) 50%);
 	background: url("./bg/cartographer.png");
 	.bg-clipper {
 		//background-color: color(light-shade);
 		background: url("./bg/topography.png");
 
-		clip-path: polygon(0 0, 100% 0, 100% 73%, 71% 77%, 29% 79%, 0 81%);
-		height: 120vh;
+		// clip-path: polygon(0 0, 100% 0, 100% 73%, 71% 77%, 29% 79%, 0 81%);
+		clip-path: polygon(
+			100% 0%,
+			0% 0%,
+			0% 95.65%,
+			1% 95.64%,
+			2% 95.61%,
+			3% 95.55%,
+			4% 95.48%,
+			5% 95.38%,
+			6% 95.26%,
+			7% 95.12%,
+			8% 94.96%,
+			9% 94.78%,
+			10% 94.59%,
+			11% 94.38%,
+			12% 94.15%,
+			13% 93.91%,
+			14% 93.65%,
+			15% 93.39%,
+			16% 93.11%,
+			17% 92.82%,
+			18% 92.53%,
+			19% 92.23%,
+			20% 91.92%,
+			21% 91.61%,
+			22% 91.3%,
+			23% 90.99%,
+			24% 90.68%,
+			25% 90.38%,
+			26% 90.08%,
+			27% 89.78%,
+			28% 89.5%,
+			29% 89.22%,
+			30% 88.95%,
+			31% 88.7%,
+			32% 88.45%,
+			33% 88.23%,
+			34% 88.02%,
+			35% 87.82%,
+			36% 87.64%,
+			37% 87.49%,
+			38% 87.35%,
+			39% 87.23%,
+			40% 87.13%,
+			41% 87.05%,
+			42% 87%,
+			43% 86.97%,
+			44% 86.96%,
+			45% 86.97%,
+			46% 87%,
+			47% 87.06%,
+			48% 87.13%,
+			49% 87.23%,
+			50% 87.35%,
+			51% 87.49%,
+			52% 87.65%,
+			53% 87.83%,
+			54% 88.02%,
+			55% 88.23%,
+			56% 88.46%,
+			57% 88.7%,
+			58% 88.96%,
+			59% 89.23%,
+			60% 89.51%,
+			61% 89.79%,
+			62% 90.09%,
+			63% 90.39%,
+			64% 90.69%,
+			65% 91%,
+			66% 91.31%,
+			67% 91.62%,
+			68% 91.93%,
+			69% 92.24%,
+			70% 92.54%,
+			71% 92.83%,
+			72% 93.12%,
+			73% 93.4%,
+			74% 93.66%,
+			75% 93.92%,
+			76% 94.16%,
+			77% 94.39%,
+			78% 94.6%,
+			79% 94.79%,
+			80% 94.97%,
+			81% 95.13%,
+			82% 95.26%,
+			83% 95.38%,
+			84% 95.48%,
+			85% 95.56%,
+			86% 95.61%,
+			87% 95.64%,
+			88% 95.65%,
+			89% 95.64%,
+			90% 95.61%,
+			91% 95.55%,
+			92% 95.47%,
+			93% 95.37%,
+			94% 95.25%,
+			95% 95.11%,
+			96% 94.96%,
+			97% 94.78%,
+			98% 94.58%,
+			99% 94.37%,
+			100% 94.14%
+		);
+		height: 100vh;
 	}
-
-	.iphone-class {
-		width: 100%;
-		min-width: 175px;
-		max-width: 375px;
-	}
-
-	.hero-title {
-		margin-bottom: -45px;
-	}
-
-	.portfolio-thumbnail-wrapper {
-		display: flex;
-		-ms-flex: 0 0 45%;
-		flex: 0 0 45%;
-		max-width: 45%;
-		justify-content: flex-end;
-		align-items: center;
-		height: fit-content;
-		a {
-			width: 45%;
-			min-width: 275px;
-		}
-		.skills-used-small {
-			display: none;
-		}
-		.iphoneSide {
-			display: none;
-		}
-	}
-
-	.portfolio-item {
-		height: 95%;
-		display: flex;
-		align-items: center;
-		h1 {
-			text-align: center;
-			font-weight: bold;
-		}
-		ul {
-			justify-content: center;
-			margin-bottom: 0;
-			display: flex;
-			flex-wrap: wrap;
-			li {
-				display: inline-block;
-				margin: 10px 10px 0 10px;
-				padding: 5px 15px;
-				background-color: color(dark-shade-light);
-				color: color(light-shade);
-				font-weight: bold;
-				transition: 0.3s ease-in-out;
-
-				-webkit-clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
-				clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
-			}
-
-			li:hover {
-				transform: scale(1.3);
-				background-color: transparent;
-				color: color(main);
-			}
-		}
-
-		p {
-			text-align: left;
-			font-size: 19px;
-			margin: 0px 3em 20px 3em;
-			text-indent: 50px;
-		}
-
-		.skill-call-wrapper {
-			margin-top: 1em;
-			width: 100%;
-		}
-
-		.action-link {
-			position: relative;
-			bottom: 0;
-		}
-
-		.portfolio-info {
-			-ms-flex: 0 0 35%;
-			flex: 0 0 35%;
-			max-width: 35%;
-			height: 95%;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-		}
-		.portfolio-info:first-child {
-			margin-top: 1rem;
-		}
-	}
-
 	#maral {
 		li:hover {
 			transform: scale(1.3);
@@ -1608,8 +1773,112 @@ section {
 
 	#skills-section {
 		.bg-clipper {
-			-webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 75% 94%, 10% 91%, -13% 89%) !important;
-			clip-path: polygon(0 0, 100% 0, 100% 96%, 75% 94%, 10% 91%, -13% 89%) !important;
+			clip-path: polygon(
+				100% 0%,
+				0% 0%,
+				0% 92%,
+				1% 91.99%,
+				2% 91.96%,
+				3% 91.92%,
+				4% 91.86%,
+				5% 91.77%,
+				6% 91.68%,
+				7% 91.56%,
+				8% 91.43%,
+				9% 91.28%,
+				10% 91.11%,
+				11% 90.93%,
+				12% 90.73%,
+				13% 90.52%,
+				14% 90.29%,
+				15% 90.04%,
+				16% 89.79%,
+				17% 89.52%,
+				18% 89.24%,
+				19% 88.94%,
+				20% 88.64%,
+				21% 88.32%,
+				22% 88%,
+				23% 87.66%,
+				24% 87.32%,
+				25% 86.97%,
+				26% 86.61%,
+				27% 86.25%,
+				28% 85.88%,
+				29% 85.51%,
+				30% 85.13%,
+				31% 84.76%,
+				32% 84.38%,
+				33% 83.99%,
+				34% 83.61%,
+				35% 83.23%,
+				36% 82.86%,
+				37% 82.48%,
+				38% 82.11%,
+				39% 81.74%,
+				40% 81.38%,
+				41% 81.02%,
+				42% 80.67%,
+				43% 80.33%,
+				44% 79.99%,
+				45% 79.67%,
+				46% 79.35%,
+				47% 79.05%,
+				48% 78.76%,
+				49% 78.47%,
+				50% 78.2%,
+				51% 77.95%,
+				52% 77.71%,
+				53% 77.48%,
+				54% 77.27%,
+				55% 77.07%,
+				56% 76.89%,
+				57% 76.72%,
+				58% 76.57%,
+				59% 76.44%,
+				60% 76.32%,
+				61% 76.22%,
+				62% 76.14%,
+				63% 76.08%,
+				64% 76.04%,
+				65% 76.01%,
+				66% 76%,
+				67% 76.01%,
+				68% 76.04%,
+				69% 76.08%,
+				70% 76.15%,
+				71% 76.23%,
+				72% 76.33%,
+				73% 76.44%,
+				74% 76.58%,
+				75% 76.73%,
+				76% 76.89%,
+				77% 77.08%,
+				78% 77.28%,
+				79% 77.49%,
+				80% 77.72%,
+				81% 77.96%,
+				82% 78.22%,
+				83% 78.49%,
+				84% 78.77%,
+				85% 79.06%,
+				86% 79.37%,
+				87% 79.69%,
+				88% 80.01%,
+				89% 80.35%,
+				90% 80.69%,
+				91% 81.04%,
+				92% 81.4%,
+				93% 81.76%,
+				94% 82.13%,
+				95% 82.5%,
+				96% 82.88%,
+				97% 83.25%,
+				98% 83.63%,
+				99% 84.02%,
+				100% 84.4%
+			);
+			// clip-path: polygon(0 0, 100% 0, 100% 96%, 75% 94%, 10% 91%, -13% 89%) !important;
 		}
 		.skill-content {
 			position: initial;
@@ -1699,4 +1968,72 @@ section {
 			height: 110% !important;
 		}
 	}
+}
+
+/* TOOLTIP */
+/* TOOLTIP */
+.tooltipSpecial {
+	width: fit-content;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	.tooltiptextSpecial {
+		width: 120px;
+		background-color: color(light-shade);
+		color: color(main);
+		font-weight: bold;
+		text-align: center;
+		padding: 5px 0;
+		border-radius: 6px;
+		position: absolute;
+		z-index: 1;
+		top: 15px;
+		opacity: 0;
+		-webkit-transition: ease-in-out 0.3s;
+		transition: ease-in-out 0.3s;
+	}
+
+	.tooltiptextSpecial::after {
+		content: "";
+		position: absolute;
+		top: 0%;
+		left: 49%;
+		margin-top: -5px;
+		border-left: 10px solid transparent;
+		border-right: 10px solid transparent;
+		border-bottom: 10px solid color(light-shade);
+	}
+
+	.tooltip-visible {
+		opacity: 1 !important;
+	}
+}
+
+@-webkit-keyframes tooltipAnim {
+	0% {
+		-webkit-transform: translateY(10px);
+		transform: translateY(10px);
+	}
+	100% {
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
+	}
+}
+
+@keyframes tooltipAnim {
+	0% {
+		-webkit-transform: translateY(10px);
+		transform: translateY(10px);
+	}
+	100% {
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
+	}
+}
+
+.tooltipAnim {
+	-webkit-animation: tooltipAnim 0.2s 1 0s ease-in-out;
+	animation: tooltipAnim 0.2s 1 0s ease-in-out;
 }
