--- a/public/main.css
+++ b/public/main.css
@@ -31,6 +31,10 @@
   border: 10px solid #0c0c0c !important;
 }
 
+#introduction .paragraph {
+  text-indent: 10px;
+}
+
 /*********************************************/
 /* BOOTSTRAP CONFIG */
 :root {
@@ -543,6 +547,31 @@ body {
 }
 
 /* END GLOBAL */
+/* PREPARE SECTION */
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.25);
+  z-index: 1;
+}
+
+.project-modal {
+  background-color: #f1f1f1;
+  position: absolute;
+  padding: 20px 40px;
+  top: 50%;
+  left: 50%;
+  width: 60%;
+  height: 70%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 10;
+  border-radius: 5px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 /* FULLPAGE JS MENU */
 .fp-watermark {
   display: none !important;
