--- a/public/main.scss
+++ b/public/main.scss
@@ -63,6 +63,7 @@ $colors: (
 	}
 	.paragraph {
 		// color: black !important;
+		text-indent: 10px;
 	}
 }
 /*********************************************/
@@ -163,7 +164,33 @@ body {
 .badge {
 	font-size: 13px !important;
 }
+
 /* END GLOBAL */
+
+/* PREPARE SECTION */
+
+.overlay {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.25);
+	z-index: 1;
+}
+
+.project-modal {
+	background-color: color(light-shade); //#0c0c0c;
+	position: absolute;
+	padding: 20px 40px;
+	top: 50%;
+	left: 50%;
+	width: 60%;
+	height: 70%;
+	transform: translate(-50%, -50%);
+	z-index: 10;
+	border-radius: 5px;
+	overflow-y: auto;
+	overflow-x: hidden;
+}
 
 /* FULLPAGE JS MENU */
 
